# patch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
.github/legacy/: CMakeLists.txt
.github/legacy/shaders/: ball.frag  ball.vert  shadow.frag  shadow.vert  shadowmap.vert  ui.vert  voxel.frag
.github/legacy/src/app/: main.cpp  win32_entry.cpp
.github/legacy/src/core/: lighting.h  math.h  particles.c  particles.h  physics.c  physics.h  ragdoll.h  scene.h  types.h  ui.c  ui.h  voxel_object.c  voxel_object.h  voxel_physics.c  voxel_physics.h
.github/legacy/src/engine/: gpu_buffer.h  renderer.cpp  renderer.h  ui_font.cpp  ui_font.h  ui_renderer.cpp  ui_renderer.h  window.cpp  window.h
.github/legacy/src/game/: combat.c  combat.h  enemy.c  enemy.h  humanoid.c  humanoid.h  player.c  player.h
.github/legacy/src/scenes/: ball_pit.c  ball_pit.h  ball_pit_renderer.cpp  ball_pit_renderer.h  melee.c  melee.h  melee_renderer.cpp  melee_renderer.h  shooter.c  shooter.h  shooter_renderer.cpp  shooter_renderer.h
app/: app_debug.cpp  app_debug.h  app_ui.cpp  app_ui.h  main.cpp
content/: materials.c  materials.h  scenes.c  scenes.h  voxel_shapes.c  voxel_shapes.h
content/materials/: mat_air.c  mat_bone.c  mat_brick.c  mat_chrome.c  mat_cloud.c  mat_concrete.c  mat_coral.c  mat_cyan.c  mat_dirt.c  mat_flesh.c  mat_glass.c  mat_glow.c  mat_grass.c  mat_green.c  mat_lavender.c  mat_metal.c  mat_mint.c  mat_orange.c  mat_peach.c  mat_pink.c  mat_red.c  mat_rose.c  mat_sand.c  mat_sky.c  mat_stone.c  mat_teal.c  mat_water.c  mat_white.c  mat_wood.c  mat_yellow.c
content/shapes/: shape_axe.c  shape_cube.c  shape_gary.c  shape_sphere.c  shape_sword.c
engine/core/: arena.h  math.h  profile.h  rng.h  spatial_hash.c  spatial_hash.h  types.h
engine/physics/: broadphase.c  broadphase.h  character.c  character.h  collision_object.c  collision_object.h  convex_hull.c  convex_hull.h  gjk.c  gjk.h  particles.c  particles.h  physics_step.c  physics_step.h  projectile.c  projectile.h  ragdoll.c  ragdoll.h  rigid_body.c  rigid_body.h  rigidbody.c  rigidbody.h  volume_contact.c  volume_contact.h  voxel_body.c  voxel_body.h
engine/platform/: platform.c  platform.h  win32_entry.cpp  window.cpp  window.h
engine/render/: draw_list.h  gpu_bvh.h  gpu_chunk.h  gpu_memory.cpp  gpu_memory.h  gpu_spatial_grid.cpp  gpu_spatial_grid.h  gpu_volume.h  renderer.cpp  renderer.h  renderer_ao_init.cpp  renderer_compute_init.cpp  renderer_denoise_init.cpp  renderer_draw.cpp  renderer_gbuffer.cpp  renderer_gbuffer_init.cpp  renderer_gi_init.cpp  renderer_internal.h  renderer_particles.cpp  renderer_raymarch.cpp  renderer_reflection_init.cpp  renderer_resources.cpp  renderer_shadow_init.cpp  renderer_taa_init.cpp  renderer_textures.cpp  renderer_voxel.cpp  renderer_voxel_objects.cpp  renderer_vulkan.cpp  shaders_embedded_prebuilt.h  ui_renderer.cpp  ui_renderer.h  voxel_push_constants.h
engine/sim/: detach.c  detach.h  entity.h  lighting.h  ragdoll.h  scene.h  terrain_detach.c  terrain_detach.h  ui.c  ui.h  voxel_object.c  voxel_object.h
engine/voxel/: bvh.c  bvh.h  chunk.c  chunk.h  connectivity.c  connectivity.h  unified_volume.c  unified_volume.h  volume.c  volume.h  volume_raycast.c  volume_shadow.c  voxel_object.c  voxel_object.h
game/: ball_pit.c  ball_pit.h  ball_pit_renderer.cpp  ball_pit_renderer.h  roam.c  roam.h  terrain_gen.c  terrain_gen.h
shaders/: deferred_lighting.frag  depth_prime.frag  gbuffer_terrain.frag  gi_inject.comp  gi_propagate.comp  particle.frag  particle.vert  raymarch_ao.comp  raymarch_gbuffer.comp  raymarch_reflection.comp  raymarch_shadow.comp  spatial_denoise.comp  taa_resolve.comp  temporal_ao.comp  temporal_reflection.comp  temporal_shadow.comp  ui.frag  ui.vert  voxel.vert  voxel_object.frag  voxel_object.vert
shaders/include/: bvh.glsl  bvh_traverse.glsl  camera.glsl  data_terrain.glsl  data_voxobj.glsl  gbuffer_sample.glsl  hdda_core.glsl  hdda_types.glsl  materials.glsl  output_gbuffer.glsl  spatial_grid.glsl
tests/: test_common.h  test_connectivity.c  test_content.c  test_core.c  test_gpu_layout.cpp  test_launch.cpp  test_physics.c  test_profile.c  test_profile_stress.c  test_profile_validation.c  test_render_perf.cpp  test_scenes.c  test_stress.c  test_terrain_detach.c  test_voxel.c
tools/: embed_spirv.cmake  run_tests.cmake  voxelize.cpp
